fixed box shadow on mobile nav and fixed phone number

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ p {
   top: 90px;
   background-color: rgba(255, 255, 255, 0.95);
   display: none;
-  z-index: 1000;
+  z-index: 999;
 }
 
 .mobile-nav-links ul li a {
